// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The grid component displays a rover on 1 2 N 1`] = `
<div
  class="grid hidden"
>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,5"
      >
        0,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,5"
      >
        1,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,5"
      >
        2,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,5"
      >
        3,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,5"
      >
        4,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,5"
      >
        5,5
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,4"
      >
        0,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,4"
      >
        1,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,4"
      >
        2,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,4"
      >
        3,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,4"
      >
        4,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,4"
      >
        5,4
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,3"
      >
        0,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,3"
      >
        1,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,3"
      >
        2,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,3"
      >
        3,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,3"
      >
        4,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,3"
      >
        5,3
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,2"
      >
        0,2
      </span>
    </div>
    <div
      class="column"
    >
      <div
        class="rover north inActive"
        data-testid="rover"
        style="transform: rotate(0deg);"
      />
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,2"
      >
        2,2
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,2"
      >
        3,2
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,2"
      >
        4,2
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,2"
      >
        5,2
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,1"
      >
        0,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,1"
      >
        1,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,1"
      >
        2,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,1"
      >
        3,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,1"
      >
        4,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,1"
      >
        5,1
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,0"
      >
        0,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,0"
      >
        1,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,0"
      >
        2,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,0"
      >
        3,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,0"
      >
        4,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,0"
      >
        5,0
      </span>
    </div>
  </div>
</div>
`;

exports[`The grid component renders 5 rows and 5 columns without regression 1`] = `
<div
  class="grid hidden"
>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,5"
      >
        0,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,5"
      >
        1,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,5"
      >
        2,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,5"
      >
        3,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,5"
      >
        4,5
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,5"
      >
        5,5
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,4"
      >
        0,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,4"
      >
        1,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,4"
      >
        2,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,4"
      >
        3,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,4"
      >
        4,4
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,4"
      >
        5,4
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,3"
      >
        0,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,3"
      >
        1,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,3"
      >
        2,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,3"
      >
        3,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,3"
      >
        4,3
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,3"
      >
        5,3
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,2"
      >
        0,2
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,2"
      >
        1,2
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,2"
      >
        2,2
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,2"
      >
        3,2
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,2"
      >
        4,2
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,2"
      >
        5,2
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,1"
      >
        0,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,1"
      >
        1,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,1"
      >
        2,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,1"
      >
        3,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,1"
      >
        4,1
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,1"
      >
        5,1
      </span>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="0,0"
      >
        0,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="1,0"
      >
        1,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="2,0"
      >
        2,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="3,0"
      >
        3,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="4,0"
      >
        4,0
      </span>
    </div>
    <div
      class="column"
    >
      <span
        class="columnCoordinate"
        title="5,0"
      >
        5,0
      </span>
    </div>
  </div>
</div>
`;
